#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([Guilecraft], [0.1], [alex.sassmannshausen@gmail.com], [guilecraft], [www.guilecraft.org])
AC_REVISION([$Revision: 0.1 $])
AC_CONFIG_SRCDIR([guilecraft.scm])

guilemoduledir="${datarootdir}/guile/site/2.0"
AC_SUBST([guilemoduledir])

AC_PATH_PROG([GUILE], [guile])

AC_OUTPUT
